<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="16dp"
>

    <TextView
            android:id="@+id/title"
            android:text="@string/student_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="3.5dp"
    />

    <EditText
            android:id="@+id/edit_student_name"
            android:hint="@string/student_new_name"
            android:autofillHints="@string/student_new_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/title"
    />

    <EditText
            android:id="@+id/edit_student_id"
            android:hint="@string/student_id"
            android:autofillHints="@string/student_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_student_name"
    />

    <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_purple"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_student_id"
            app:layout_constraintEnd_toStartOf="@id/btn_update"
            android:backgroundTint="@android:color/transparent"
    />

    <Button
            android:id="@+id/btn_update"
            android:text="@string/update"
            android:textColor="@android:color/holo_purple"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_student_id"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@android:color/transparent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>